kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # name of the ingress, namespace and labels inside the cluster
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    # annotation to specify the ingress class to be used for this ingress
    nginx.ingress.kubernetes.io/rewrite-target: /
    # to autimatically redirect HTTP traffic to HTTPS, ensuring secure communication between clients and the application
    # ssl-redirect set to false because we do not have a TLS certificate configured yet
    # when the domain is added and certificate change this to true
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # maximum allowed size of the client request body, set to 10 megabytes
    # to protect the application from large requests that could potentially cause performance issues or crashes
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    # only requests from this domain will be routed to the service
    # without a host field the ingress accepts ALL incoming traffic
    # this means any request to the ALB IP or DNS will reach the app
    - http:
        paths:
          # path to route the traffic to the service
          - path: /
            pathType: Prefix
            backend:
              # send matching traffic to the portfolio-service on port 80
              service:
                name: portfolio-service
                port:
                  number: 80
